add crud for items svc
